--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "splurge-safe-io"
-version = "2025.0.5"
-description = "A utility library for working with DSV (Delimited String Values) files"
+version = "2025.0.6"
+description = "A safe, atomic, and cross-platform way to handle text file I/O in Python."
 readme = "README.md"
 requires-python = ">=3.10"
 license = "MIT"
