--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "splurge-safe-io"
-version = "2025.3.0"
+version = "2025.4.0"
 description = "A safe, atomic, and cross-platform way to handle text file I/O in Python."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -24,9 +24,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 
-dependencies = [
-    "splurge-exceptions>=2025.2.0,<2025.3.0",
-]
+dependencies = []
 
 [project.optional-dependencies]
 dev = [
@@ -45,7 +43,7 @@ Documentation = "https://github.com/jim-schilling/splurge-safe-io#readme"
 "Bug Tracker" = "https://github.com/jim-schilling/splurge-safe-io/issues"
 
 [project.scripts]
-splurge-safe-io = "splurge_safe_io.cli:run_cli"
+splurge-safe-io = "splurge_safe_io.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
