--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "splurge-safe-io"
-version = "2025.4.1"
+version = "2025.4.2"
 description = "A safe, atomic, and cross-platform way to handle text file I/O in Python."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -126,7 +126,27 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 
 [tool.mypy]
-# Only run mypy against the splurge_safe_io package
-files = ["splurge_safe_io"]
-# show_error_codes helps with diagnostics
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_unreachable = true
+strict_equality = true
 show_error_codes = true
+# Allow missing imports for vendored/external helper package used at runtime
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["tests.*"]
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = ["examples.*"]
+check_untyped_defs = false
+disallow_untyped_defs = false
